--- a/public/kanbas/courses/settings/course_details/index.html
+++ b/public/kanbas/courses/settings/course_details/index.html
@@ -303,11 +303,16 @@
       </tr>
       <tr>
         <td></td>
-        <td><a href="#">more options</a></td>
+        <td style="padding-bottom: 20px; padding-left: 20px; padding-top: 10px">
+          <a href="#">more options</a>
+        </td>
+      </tr>
+      <tr>
+        <td colspan="2" bgcolor="#cccccc"></td>
       </tr>
       <tr>
         <td></td>
-        <td align="right">
+        <td align="right" style="padding-top: 10px">
           <button type="button">Update Course Details</button>
         </td>
       </tr>
