--- a/public/kanbas/courses/settings/course_details/screen.html
+++ b/public/kanbas/courses/settings/course_details/screen.html
@@ -378,12 +378,22 @@
               </tr>
               <tr>
                 <td></td>
-                <td><a href="#">more options</a></td>
+                <td
+                  style="
+                    padding-bottom: 20px;
+                    padding-left: 20px;
+                    padding-top: 10px;
+                  "
+                >
+                  <a href="#">more options</a>
+                </td>
+              </tr>
+              <tr>
+                <td colspan="2" bgcolor="#cccccc"></td>
               </tr>
               <tr>
                 <td></td>
-                <td align="right">
-                  <hr />
+                <td align="right" style="padding-top: 10px">
                   <button type="button">Update Course Details</button>
                 </td>
               </tr>
