--- a/public/kanbas/courses/settings/course_navigation/index.html
+++ b/public/kanbas/courses/settings/course_navigation/index.html
@@ -92,7 +92,7 @@
       </tbody>
     </table>
     <br />
-    Drag items here to hide them from students.<br />
+    <big>Drag items here to hide them from students.</big><br />
     Disabling most pages will cause students who visit those pages to be
     redirected <br />
     to the course home page.
