--- a/public/kanbas/courses/assignments/screen.html
+++ b/public/kanbas/courses/assignments/screen.html
@@ -125,22 +125,22 @@
               <tr>
                 <td>
                   <ul>
-                    <li><a href="edit/index.html">A1 - ENV + HTML</a></li>
+                    <li><a href="edit/screen.html">A1 - ENV + HTML</a></li>
                     <a href="#">Multiple Modules</a>
                     | Not available yet
-                    <li><a href="edit/index.html">A2 - CSS + BOOTSTRAP</a></li>
+                    <li><a href="edit/screen.html">A2 - CSS + BOOTSTRAP</a></li>
                     <a href="#">Multiple Modules</a>
                     | Not available yet
-                    <li><a href="edit/index.html">A3 - JS + REACT</a></li>
+                    <li><a href="edit/screen.html">A3 - JS + REACT</a></li>
                     <a href="#">Multiple Modules</a>
                     | Not available yet
-                    <li><a href="edit/index.html">A4 - STATE + REDUX</a></li>
+                    <li><a href="edit/screen.html">A4 - STATE + REDUX</a></li>
                     <a href="#">Multiple Modules</a>
                     | Not available yet
-                    <li><a href="edit/index.html">A5 - NODE + SESSION</a></li>
+                    <li><a href="edit/screen.html">A5 - NODE + SESSION</a></li>
                     <a href="#">Multiple Modules</a>
                     | Not available yet
-                    <li><a href="edit/index.html">A6 - MONGO + MONGOOSE</a></li>
+                    <li><a href="edit/screen.html">A6 - MONGO + MONGOOSE</a></li>
                     <a href="#">Multiple Modules</a>
                     | Not available yet
                   </ul>
