--- a/public/kanbas/courses/modules/screen.html
+++ b/public/kanbas/courses/modules/screen.html
@@ -17,37 +17,12 @@
     <link rel="stylesheet" href="/kanbas/courses/navigation/index.css" />
   </head>
   <body>
-    <div class="small-screen-top-bar d-md-none pb-3">
-      <div class="container">
-        <div class="row">
-          <div class="col-1">
-            <a href="/kanbas/courses/home/small_kanbas_nav.html">
-              <i class="fa-solid fa-bars wd-white-color"></i
-            ></a>
-          </div>
-          <div class="col">
-            <p>
-              CS4550.12631.202410 <br />
-              Modules
-            </p>
-          </div>
-          <div class="col-2">
-            <div class="float-end">
-              <a href="/kanbas/courses/home/small_course_nav.html">
-                <i class="fa-solid fa-glasses wd-white-color"></i>
-                <i class="fa-solid fa-angle-down wd-white-color"></i
-              ></a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
     <div class="container-fluid">
       <div class="row">
         <div
           class="col-md-1 wd-red-color wd-no-padding wd-width-70 d-flex flex-column"
         >
-          <ul class="wd-kanbas-navigation flex-grow-1 d-none d-md-block">
+          <ul class="wd-kanbas-navigation flex-grow-1">
             <li>
               <a href="http://northeastern.edu"
                 ><br /><i class="fa-solid fa-n fa-xl" style="color: #ff0000"></i
@@ -120,8 +95,8 @@
           </ul>
         </div>
 
-        <div class="col-md col-sm wd-red-color d-flex flex-column">
-          <div class="d-none d-md-flex wd-margin-top-10 wd-top-bar">
+        <div class="col-md wd-red-color">
+          <div class="wd-margin-top-10 wd-top-bar">
             <div>
               <nav aria-label="breadcrumb">
                 <div class="breadcrumb-container">
@@ -149,11 +124,11 @@
               <i class="fa-solid fa-glasses"></i> Student View
             </button>
           </div>
-          <hr class="d-none d-md-block wd-margin-bottom-20 wd-margin-left-10" />
+          <hr class="wd-margin-bottom-20 wd-margin-left-10" />
 
           <div class="container-fluid">
             <div class="row">
-              <div class="d-none d-md-block col-md-2">
+              <div class="col-md-2">
                 <p class="wd-course-nav-top-text wd-margin-left-10">
                   202410_1 Fall 2023 Semest...
                 </p>
@@ -162,14 +137,14 @@
                     <ul style="margin: 0; padding-bottom: 0">
                       <tr>
                         <td>
-                          <li class="wd-active">
+                          <li>
                             <a href="/Kanbas/Courses/Home/screen.html">Home</a>
                           </li>
                         </td>
                       </tr>
                       <tr>
                         <td>
-                          <li>
+                          <li class="wd-active">
                             <a href="/Kanbas/Courses/Modules/screen.html"
                               >Modules</a
                             >
@@ -591,7 +566,7 @@
                   </li>
                 </ul>
               </div>
-              <div class="me-2 d-none d-lg-block col">
+              <div class="col d-none">
                 <div class="sidebar">
                   <!-- Sidebar content goes here -->
                   <div class="wd-course-status-container">
