--- a/public/kanbas/courses/navigation/index.html
+++ b/public/kanbas/courses/navigation/index.html
@@ -1,45 +1,146 @@
 <html>
   <head>
     <title>Course Navigation</title>
+    <link rel="stylesheet" href="/Kanbas/styles.css" />
+    <link rel="stylesheet" href="/Kanbas/Courses/Navigation/index.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
-    <ul style="margin: 0; padding-bottom: 0">
-      <li>
-        <a href="/kanbas/courses/Home/screen.html"> Home</a>
-      </li>
-      <li><a href="#"> Modules</a></li>
-      <li><a href="#"> Piazza</a></li>
-      <li>
-        <a href="#"> Zoom Meetings</a>
-      </li>
-      <li>
-        <a href="/kanbas/courses/Assignments/screen.html"> Assignments</a>
-      </li>
-      <li><a href="#"> Quizzes</a></li>
-      <li><a href="/kanbas/courses/Grades/screen.html"> Grades</a></li>
-      <li><a href="#"> People</a></li>
-      <li>
-        <a href="#"> Panopto Video</a>
-      </li>
-      <li>
-        <a href="#"> Discussions</a>
-      </li>
-      <li>
-        <a href="#"> Announcements</a>
-      </li>
-      <li><a href="#"> Pages</a></li>
-      <li><a href="#"> Files</a></li>
-      <li><a href="#"> Rubrics</a></li>
-      <li><a href="#"> Outcomes</a></li>
-      <li>
-        <a href="#"> Collaborations</a>
-      </li>
-      <li><a href="#"> Syllabus</a></li>
-      <li>
-        <a href="/kanbas/courses/settings/course_details/screen.html">
-          Settings</a
-        >
-      </li>
-    </ul>
+    <table>
+      <tbody class="wd-navigation">
+        <ul>
+          <tr>
+            <td>
+              <li>
+                <a href="/Kanbas/Courses/Home/screen.html">Home</a>
+              </li>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <li class="wd-active">
+                <a href="/Kanbas/Courses/Modules/screen.html">Modules</a>
+              </li>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <li><a href="http://piazza.com">Piazza</a></li>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <li><a href="#">Zoom</a></li>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <li>
+                <a href="/Kanbas/Courses/Assignments/screen.html"
+                  >Assignments</a
+                >
+              </li>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <li><a href="#">Quizzes</a></li>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <li><a href="/Kanbas/Courses/Grades/screen.html">Grades</a></li>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <li><a href="#">People</a></li>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <li><a href="#">Panopto Video</a></li>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <li>
+                <a href="#">Discussions </a>
+              </li>
+            </td>
+            <td><i class="fa-regular fa-eye-slash" style="color: gray"></i></td>
+          </tr>
+          <tr>
+            <td>
+              <li>
+                <a href="#">Announcements </a>
+              </li>
+            </td>
+            <td><i class="fa-regular fa-eye-slash" style="color: gray"></i></td>
+          </tr>
+          <tr>
+            <td>
+              <li>
+                <a href="#">Pages</a>
+              </li>
+            </td>
+            <td><i class="fa-regular fa-eye-slash" style="color: gray"></i></td>
+          </tr>
+          <tr>
+            <td>
+              <li>
+                <a href="#">Files</a>
+              </li>
+            </td>
+            <td><i class="fa-regular fa-eye-slash" style="color: gray"></i></td>
+          </tr>
+          <tr>
+            <td>
+              <li>
+                <a href="#">Rubrics</a>
+              </li>
+            </td>
+            <td><i class="fa-regular fa-eye-slash" style="color: gray"></i></td>
+          </tr>
+          <tr>
+            <td>
+              <li>
+                <a href="#">Outcomes</a>
+              </li>
+            </td>
+            <td><i class="fa-regular fa-eye-slash" style="color: gray"></i></td>
+          </tr>
+          <tr>
+            <td>
+              <li>
+                <a href="#">Collaborations</a>
+              </li>
+            </td>
+            <td><i class="fa-regular fa-eye-slash" style="color: gray"></i></td>
+          </tr>
+          <tr>
+            <td>
+              <li>
+                <a href="#">Syllabus</a>
+              </li>
+            </td>
+            <td><i class="fa-regular fa-eye-slash" style="color: gray"></i></td>
+          </tr>
+          <tr>
+            <td>
+              <li>
+                <a href="/kanbas/courses/settings/course_details/screen.html"
+                  >Settings</a
+                >
+              </li>
+            </td>
+          </tr>
+        </ul>
+      </tbody>
+    </table>
   </body>
 </html>
