--- a/public/kanbas/navigation/index.html
+++ b/public/kanbas/navigation/index.html
@@ -1,24 +1,77 @@
 <html>
   <head>
-    <title>kanbas Navigation</title>
+    <link rel="stylesheet" href="/Kanbas/styles.css" />
+    <link rel="stylesheet" href="/Kanbas/Navigation/index.css" />
+    <link rel="stylesheet" href="/libs/font-awesome/css/font-awesome.min.css" />
+    <!-- <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css"
+      rel="stylesheet"
+    /> -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+      crossorigin="anonymous"
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
   <body>
-    <ul style="margin: 0; padding-bottom: 0">
-      <li><a href="/kanbas/Account/Profile/screen.html"> Account</a></li>
+    <ul class="wd-kanbas-navigation">
       <li>
-        <a href="#">Dashboard</a>
+        <a href="http://northeastern.edu"
+          ><br /><i class="fa-solid fa-n fa-xl" style="color: #ff0000"></i
+        ></a>
       </li>
       <li>
-        <a href="/kanbas/Courses/Home/screen.html">Courses</a>
+        <a href="/Kanbas/Account/Profile/screen.html"
+          ><i class="fa-solid fa-circle-user" style="color: #ffffff"></i>
+          Account</a
+        >
+      </li>
+      <li class="wd-active">
+        <a href="/Kanbas/Dashboard/screen.html">
+          <i class="fa-solid fa-gauge" style="color: #ff0000"></i> Dashboard</a
+        >
       </li>
       <li>
-        <a href="#">Calendar</a>
+        <a href="/Kanbas/Courses/Home/screen.html"
+          ><i class="fa-solid fa-book" style="color: #ff0000"></i> Courses</a
+        >
       </li>
-      <li><a href="#">Inbox</a></li>
-      <li><a href="#">History</a></li>
-      <li><a href="#">Studio</a></li>
-      <li><a href="#">Commons</a></li>
-      <li><a href="#">Help</a></li>
+      <li>
+        <a href="#"
+          ><i class="fa-solid fa-calendar-days" style="color: #ff0000"></i>
+          Calendar</a
+        >
+      </li>
+      <li>
+        <a href="#"
+          ><i class="fa-solid fa-envelope-open-text" style="color: #ff0000"></i
+          ><br />
+          Inbox</a
+        >
+      </li>
+      <li>
+        <a href="#"
+          ><i class="fa-regular fa-clock" style="color: #ff0000"></i> History</a
+        >
+      </li>
+      <li>
+        <a href="#"
+          ><i class="fa-solid fa-desktop" style="color: #ff0000"></i> Studio</a
+        >
+      </li>
+      <li>
+        <a href="#"
+          ><i class="fa-solid fa-circle-right" style="color: #ff0000"></i>
+          Commons</a
+        >
+      </li>
+      <li>
+        <a href="#"
+          ><i class="fa-regular fa-circle-question" style="color: #ff0000"></i
+          ><br />Help</a
+        >
+      </li>
     </ul>
   </body>
 </html>
