--- a/public/kanbas/courses/assignments/screen.html
+++ b/public/kanbas/courses/assignments/screen.html
@@ -25,7 +25,7 @@
     <div class="container-fluid">
       <div class="row">
         <div
-          class="col-md-1 wd-red-color wd-no-padding wd-width-70 d-flex flex-column"
+          class="col-md-1 wd-red-color wd-no-padding wd-width-70 d-none d-md-flex flex-column"
         >
           <ul class="wd-kanbas-navigation flex-grow-1">
             <li>
@@ -132,7 +132,7 @@
 
           <div class="container-fluid">
             <div class="row">
-              <div class="col-md-2">
+              <div class="col-2">
                 <p class="wd-course-nav-top-text wd-margin-left-10">
                   202310_2 Fall 2022 Semest...
                 </p>
@@ -317,7 +317,7 @@
                 </table>
               </div>
 
-              <div class="col-md-10">
+              <div class="col-10">
                 <div class="container">
                   <div class="row">
                     <div class="col">
