--- a/public/kanbas/courses/assignments/edit/screen.html
+++ b/public/kanbas/courses/assignments/edit/screen.html
@@ -23,7 +23,9 @@
   <body>
     <div class="container-fluid">
       <div class="row">
-        <div class="col-md-1 wd-no-padding wd-width-70 d-flex flex-column">
+        <div
+          class="col-md-1 wd-no-padding wd-width-70 d-none d-md-flex flex-column"
+        >
           <ul class="wd-kanbas-navigation wd-red-color flex-grow-1">
             <li>
               <a href="http://northeastern.edu"
@@ -135,7 +137,7 @@
 
           <div class="container-fluid">
             <div class="row">
-              <div class="col-md-2">
+              <div class="col-2">
                 <p class="wd-course-nav-top-text wd-margin-left-10">
                   202410_1 Fall 2023 Semest…
                 </p>
@@ -349,7 +351,7 @@ This assignment describes how to install the development environment for creatin
                     >
                     <div class="col-sm-8">
                       <input
-                        type="text"
+                        type="number"
                         class="form-control w-50"
                         id="points"
                         value="100"
@@ -454,8 +456,16 @@ This assignment describes how to install the development environment for creatin
                     >Notify users that this content has changed
                   </label>
                   <div class="float-end">
-                    <button type="button" class="btn btn-sm">Cancel</button>
-                    <button type="button" class="btn-red btn-sm">Save</button>
+                    <a href="/kanbas/courses/assignments/screen.html"
+                      ><button type="button" class="btn btn-sm">
+                        Cancel
+                      </button></a
+                    >
+                    <a href="/kanbas/courses/assignments/screen.html"
+                      ><button type="button" class="btn-red btn-sm">
+                        Save
+                      </button></a
+                    >
                   </div>
                 </div>
                 <hr />
