--- a/public/kanbas/courses/assignments/screen.html
+++ b/public/kanbas/courses/assignments/screen.html
@@ -25,12 +25,12 @@
     <div class="container-fluid">
       <div class="row">
         <div
-          class="col-md-1 wd-red-color wd-no-padding wd-width-70 d-none d-md-flex flex-column"
+          class="col-md-1 wd-red-color p-0 wd-width-70 d-none d-md-flex flex-column"
         >
           <ul class="wd-kanbas-navigation flex-grow-1">
             <li>
               <a href="http://northeastern.edu"
-                ><br /><i class="fa-solid fa-n fa-xl" style="color: #ff0000"></i
+                ><br /><i class="fa-solid fa-n fa-xl wd-red-color"></i
               ></a>
             </li>
             <li>
@@ -100,20 +100,18 @@
           </ul>
         </div>
         <div class="col wd-red-color">
-          <div class="wd-margin-top-10 wd-top-bar">
+          <div class="mt-2 wd-top-bar">
             <div>
               <nav aria-label="breadcrumb">
                 <div class="breadcrumb-container">
-                  <i
-                    class="fa-solid fa-bars wd-margin-left-10 wd-right-margin-30 wd-red-color"
-                  ></i>
+                  <i class="fa-solid fa-bars ms-3 me-4 wd-red-color"></i>
                   <ol class="breadcrumb">
-                    <li class="breadcrumb-item wd-margin-top-15">
+                    <li class="breadcrumb-item mt-3">
                       <a href="#" class="wd-remove-text-decoration wd-red-color"
                         >CS5610.11744.202310</a
                       >
                     </li>
-                    <li class="breadcrumb-item wd-margin-top-15">
+                    <li class="breadcrumb-item mt-3">
                       <a
                         href="#"
                         class="wd-remove-text-decoration wd-black-color"
@@ -124,21 +122,21 @@
                 </div>
               </nav>
             </div>
-            <button type="button" class="btn btn-sm wd-right-margin-30">
+            <button type="button" class="btn btn-sm me-4">
               <i class="fa-solid fa-glasses"></i> Student View
             </button>
           </div>
-          <hr class="wd-margin-bottom-20 wd-margin-left-10" />
+          <hr class="ms-4 me-3" />
 
           <div class="container-fluid">
             <div class="row">
               <div class="col-2">
-                <p class="wd-course-nav-top-text wd-margin-left-10">
+                <p class="wd-course-nav-top-text ms-3">
                   202310_2 Fall 2022 Semest...
                 </p>
                 <table>
                   <tbody class="wd-navigation">
-                    <ul style="margin: 0; padding-bottom: 0">
+                    <ul class="m-0 pb-0">
                       <tr>
                         <td>
                           <li>
@@ -334,7 +332,7 @@
                         <button type="button" class="btn btn-sm">
                           <i class="fa-solid fa-plus"></i> Group
                         </button>
-                        <button type="button" class="btn-red btn-sm">
+                        <button type="button" class="btn-red btn-danger btn-sm">
                           <i class="fa-solid fa-plus"></i> Assignment
                         </button>
                         <button type="button" class="btn btn-sm">
@@ -349,9 +347,7 @@
 
                 <ul class="list-group">
                   <li class="list-group-item rounded-0 wd-bg-lightgray">
-                    <i
-                      class="fa-solid fa-grip-vertical wd-modules wd-margin-left-10"
-                    ></i>
+                    <i class="fa-solid fa-grip-vertical wd-modules ms-2"></i>
                     <i class="fa-solid fa-caret-down wd-modules"></i>
                     Assignments
 
@@ -360,7 +356,7 @@
                         40% of Total
                       </div>
 
-                      <i class="fa-solid fa-plus wd-margin-right-10"></i>
+                      <i class="fa-solid fa-plus me-2"></i>
                       <i class="fa-solid fa-ellipsis-vertical"></i>
                     </div>
                   </li>
@@ -391,7 +387,7 @@
                         <div class="col">
                           <div class="float-end">
                             <i
-                              class="fa-solid fa-circle-check wd-disabled-red-color wd-margin-20"
+                              class="fa-solid fa-circle-check wd-disabled-red-color m-3"
                               disabled
                             ></i>
                             <i class="fa-solid fa-ellipsis-vertical"></i>
@@ -428,7 +424,7 @@
                         <div class="col">
                           <div class="float-end">
                             <i
-                              class="fa-solid fa-circle-check wd-disabled-red-color wd-margin-20"
+                              class="fa-solid fa-circle-check wd-disabled-red-color m-3"
                               disabled
                             ></i>
                             <i class="fa-solid fa-ellipsis-vertical"></i>
@@ -465,7 +461,7 @@
                         <div class="col">
                           <div class="float-end">
                             <i
-                              class="fa-solid fa-circle-check wd-disabled-red-color wd-margin-20"
+                              class="fa-solid fa-circle-check wd-disabled-red-color m-3"
                               disabled
                             ></i>
                             <i class="fa-solid fa-ellipsis-vertical"></i>
@@ -502,7 +498,7 @@
                         <div class="col">
                           <div class="float-end">
                             <i
-                              class="fa-solid fa-circle-check wd-disabled-red-color wd-margin-20"
+                              class="fa-solid fa-circle-check wd-disabled-red-color m-3"
                               disabled
                             ></i>
                             <i class="fa-solid fa-ellipsis-vertical"></i>
@@ -539,7 +535,7 @@
                         <div class="col">
                           <div class="float-end">
                             <i
-                              class="fa-solid fa-circle-check wd-disabled-red-color wd-margin-20"
+                              class="fa-solid fa-circle-check wd-disabled-red-color m-3"
                               disabled
                             ></i>
                             <i class="fa-solid fa-ellipsis-vertical"></i>
@@ -576,7 +572,7 @@
                         <div class="col">
                           <div class="float-end">
                             <i
-                              class="fa-solid fa-circle-check wd-disabled-red-color wd-margin-20"
+                              class="fa-solid fa-circle-check wd-disabled-red-color m-3"
                               disabled
                             ></i>
                             <i class="fa-solid fa-ellipsis-vertical"></i>
