--- a/public/kanbas/courses/grades/screen.html
+++ b/public/kanbas/courses/grades/screen.html
@@ -125,7 +125,7 @@
               <i class="fa-solid fa-glasses"></i> Student View
             </button>
           </div>
-          <hr class="wd-margin-bottom-20 wd-margin-left-10" />
+          <hr class="mb-4 ms-3" />
 
           <div class="container-fluid">
             <div class="row">
@@ -315,7 +315,7 @@
               </div>
               <div class="col-10">
                 <div class="row">
-                  <div class="col">
+                  <div class="col-12">
                     <div class="float-end mb-2">
                       <button type="button" class="btn btn-sm">
                         <i class="fa-solid fa-file-import"></i> Import
@@ -331,14 +331,14 @@
                   </div>
 
                   <div class="row mb-2">
-                    <div class="col">
+                    <div class="col-6">
                       <b>Student Names</b>
                     </div>
-                    <div class="col"><b>Assignment Names</b></div>
+                    <div class="col-6"><b>Assignment Names</b></div>
                   </div>
 
                   <div class="row mb-3">
-                    <div class="col">
+                    <div class="col-6">
                       <select
                         class="form-select"
                         aria-label="Default select example"
@@ -346,7 +346,7 @@
                         <option selected>🔍 Search Students</option>
                       </select>
                     </div>
-                    <div class="col">
+                    <div class="col-6">
                       <select
                         class="form-select"
                         aria-label="Default select example"
@@ -357,12 +357,12 @@
                   </div>
 
                   <div class="row mb-3">
-                    <div class="col">
+                    <div class="col-6">
                       <button type="button" class="btn btn-sm">
                         <i class="fa-solid fa-filter"></i> Apply Filters
                       </button>
                     </div>
-                    <div class="col"></div>
+                    <div class="col-6"></div>
                   </div>
 
                   <div class="table-responsive">
