--- a/public/kanbas/courses/home/small_course_nav.html
+++ b/public/kanbas/courses/home/small_course_nav.html
@@ -46,14 +46,26 @@
       <div class="col-1 text-end">
         <i class="fa-solid fa-house wd-red-color"></i>
       </div>
-      <div class="col text-start wd-red-color">Home</div>
+      <div class="col text-start">
+        <a
+          href="/kanbas/courses/home/screen.html"
+          class="wd-remove-text-decoration wd-red-color"
+          >Home</a
+        >
+      </div>
     </div>
 
     <div class="row">
       <div class="col-1 text-end">
         <i class="fa-solid fa-boxes-stacked wd-red-color"></i>
       </div>
-      <div class="col text-start wd-red-color">Modules</div>
+      <div class="col text-start">
+        <a
+          href="/kanbas/courses/modules/screen.html"
+          class="wd-remove-text-decoration wd-red-color"
+          >Modules</a
+        >
+      </div>
     </div>
 
     <div class="row">
@@ -74,7 +86,13 @@
       <div class="col-1 text-end">
         <i class="fa-solid fa-file-signature wd-red-color"></i>
       </div>
-      <div class="col text-start wd-red-color">Assignments</div>
+      <div class="col text-start">
+        <a
+          href="/kanbas/courses/assignments/screen.html"
+          class="wd-remove-text-decoration wd-red-color"
+          >Assignments</a
+        >
+      </div>
     </div>
 
     <div class="row">
@@ -87,7 +105,13 @@
         <div class="col-1 text-end">
           <i class="fa-solid fa-file-signature wd-red-color"></i>
         </div>
-        <div class="col text-start wd-red-color">Grades</div>
+        <div class="col text-start">
+          <a
+            href="/kanbas/courses/grades/screen.html"
+            class="wd-remove-text-decoration wd-red-color"
+            >Grades</a
+          >
+        </div>
       </div>
 
       <div class="row">
@@ -197,7 +221,13 @@
         <div class="col-1 text-end">
           <i class="fa-solid fa-gear wd-red-color"></i>
         </div>
-        <div class="col text-start wd-red-color">Settings</div>
+        <div class="col text-start">
+          <a
+            href="/kanbas/courses/settings/course_details/screen.html"
+            class="wd-remove-text-decoration wd-red-color"
+            >Settings</a
+          >
+        </div>
       </div>
     </div>
   </body>
