--- a/public/kanbas/courses/home/small_kanbas_nav.html
+++ b/public/kanbas/courses/home/small_kanbas_nav.html
@@ -21,7 +21,7 @@
       <div class="col">
         <div class="float-end me-5 mt-3">
           <a href="/Kanbas/Courses/Home/screen.html">
-            <i class="fa-solid fa-xmark"></i
+            <i class="fa-solid fa-xmark wd-black-color"></i
           ></a>
         </div>
       </div>
@@ -31,14 +31,26 @@
       <div class="col-1 text-end">
         <i class="fa-solid fa-gauge wd-red-color"></i>
       </div>
-      <div class="col text-start wd-red-color">Dashboard</div>
+      <div class="col text-start">
+        <a
+          href="/kanbas/courses/modules/screen.html"
+          class="wd-remove-text-decoration wd-red-color"
+          >Dashboard</a
+        >
+      </div>
     </div>
 
     <div class="row">
       <div class="col-1 text-end">
         <i class="fa-regular fa-circle-user"></i>
       </div>
-      <div class="col text-start wd-red-color">Account</div>
+      <div class="col text-start">
+        <a
+          href="/kanbas/account/profile/screen.html"
+          class="wd-remove-text-decoration wd-red-color"
+          >Account</a
+        >
+      </div>
       <div class="col-1 float-end"><i class="fa-solid fa-angle-right"></i></div>
     </div>
 
@@ -46,7 +58,13 @@
       <div class="col-1 text-end">
         <i class="fa-solid fa-book wd-red-color"></i>
       </div>
-      <div class="col text-start wd-red-color">Courses</div>
+      <div class="col text-start">
+        <a
+          href="/kanbas/courses/home/screen.html"
+          class="wd-remove-text-decoration wd-red-color"
+          >Courses</a
+        >
+      </div>
       <div class="col-1 float-end"><i class="fa-solid fa-angle-right"></i></div>
     </div>
 
@@ -80,7 +98,7 @@
         <div class="col text-start wd-red-color">Commons</div>
       </div>
 
-      <div class="row">
+      <!-- <div class="row">
         <div class="col-1 text-end">
           <i class="fa-regular fa-clock wd-red-color"></i>
         </div>
@@ -98,7 +116,7 @@
         <div class="col-1 float-end">
           <i class="fa-solid fa-angle-right"></i>
         </div>
-      </div>
+      </div> -->
     </div>
   </body>
 </html>
